dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminserver-deployment
  namespace: ashok
  labels:
    app: adminserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adminserver
  template:
    metadata:
      labels:
        app: adminserver
    spec:
      containers:
        - name: adminserver
          image: caannamalai/adminserver:3.2.4
          ports:
            - containerPort: 9090
