ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminserver-deployment
  namespace: ashok
  labels:
    app: adminserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adminserver
  template:
    metadata:
      labels:
        app: adminserver
    spec:
      containers:
        - name: adminserver
          image: caannamalai/adminserver:3.2.4
          ports:
            - containerPort: 9090

---

apiVersion: v1
kind: Service
metadata:
  name: adminserver-service
  namespace: ashok
  labels:
    app: adminserver
spec:
  selector:
    app: adminserver
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9090

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adminserver-ingress
  namespace: ashok
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host:  ""
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: adminserver-service
                port:
                  number: 80
